syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.j5ik2o.threadWeaver.adaptor.grpc.service";
option java_outer_classname = "ThreadCommandProto";

package thread;

import "thread/model.proto";

service ThreadCommandService {
    rpc CreateThread (CreateThreadRequest) returns (CreateThreadResponse) {
    }
    rpc DestroyThread (DestroyThreadRequest) returns (DestroyThreadResponse) {
    }
    rpc JoinAdministratorIds (JoinAdministratorIdsRequest) returns (JoinAdministratorIdsResponse) {
    }
    rpc LeaveAdministratorIds (LeaveAdministratorIdsRequest) returns (LeaveAdministratorIdsResponse) {
    }
    rpc JoinMemberIds (JoinAdministratorIdsRequest) returns (JoinAdministratorIdsResponse) {
    }
    rpc LeaveMemberIds (LeaveAdministratorIdsRequest) returns (LeaveAdministratorIdsResponse) {
    }
    rpc AddMessages (AddMessagesRequest) returns (AddMessagesResponse) {
    }
    rpc RemoveMessages (RemoveMessagesRequest) returns (RemoveMessagesResponse) {
    }
}


